--- a/package.json
+++ b/package.json
@@ -33,12 +33,15 @@
     "nuqs": "^2.2.3",
     "ofetch": "^1.4.1",
     "react": "^19.0.0",
+    "react-aria-components": "^1.5.0",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^4.1.2",
     "react-intersection-observer": "^9.14.0",
     "remeda": "^2.17.4",
     "tailwind-merge": "^2.5.5",
+    "tailwind-variants": "^0.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-react-aria-components": "^1.2.0",
     "usehooks-ts": "^3.1.0",
     "vaul": "^1.1.2",
     "viem": "^2.21.55",
