--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.38.2",
     "jose": "^5.9.6",
+    "justd-icons": "^1.10.0",
     "lucide-react": "^0.468.0",
+    "motion": "^11.14.4",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
     "nuqs": "^2.2.3",
@@ -38,6 +40,7 @@
     "react-error-boundary": "^4.1.2",
     "react-intersection-observer": "^9.14.0",
     "remeda": "^2.17.4",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwind-variants": "^0.3.0",
     "tailwindcss-animate": "^1.0.7",
