--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@t3-oss/env-nextjs": "^0.11.1",
     "@tanstack/react-query": "^5.62.7",
     "@tanstack/react-query-next-experimental": "^5.62.7",
+    "@tanstack/react-virtual": "^3.11.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -39,6 +40,7 @@
     "react-dom": "^19.0.0",
     "react-error-boundary": "^4.1.2",
     "react-intersection-observer": "^9.14.0",
+    "react-virtuoso": "^4.12.3",
     "remeda": "^2.17.4",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
@@ -48,6 +50,7 @@
     "usehooks-ts": "^3.1.0",
     "vaul": "^1.1.2",
     "viem": "^2.21.55",
+    "virtua": "^0.39.2",
     "zod": "^3.24.1",
     "zustand": "^5.0.2"
   },
