--- a/package.json
+++ b/package.json
@@ -10,15 +10,6 @@
     "scan": "bunx react-scan@latest localhost:3000"
   },
   "dependencies": {
-    "@radix-ui/react-dialog": "^1.1.3",
-    "@radix-ui/react-dropdown-menu": "^2.1.3",
-    "@radix-ui/react-select": "^2.1.3",
-    "@radix-ui/react-separator": "^1.1.1",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-tabs": "^1.1.2",
-    "@radix-ui/react-toast": "^1.2.3",
-    "@radix-ui/react-toggle": "^1.1.1",
-    "@radix-ui/react-tooltip": "^1.1.5",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@tanstack/react-query": "^5.62.7",
     "@tanstack/react-query-next-experimental": "^5.62.7",
@@ -33,6 +24,7 @@
     "motion": "^11.14.4",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
+    "nextjs-toploader": "^3.7.15",
     "nuqs": "^2.2.3",
     "ofetch": "^1.4.1",
     "react": "^19.0.0",
@@ -48,7 +40,6 @@
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-react-aria-components": "^1.2.0",
     "usehooks-ts": "^3.1.0",
-    "vaul": "^1.1.2",
     "viem": "^2.21.55",
     "virtua": "^0.39.2",
     "zod": "^3.24.1",
