--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-virtual": "^3.11.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.4",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.38.2",
     "jose": "^5.9.6",
