--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
 NEXT_PUBLIC_URL="http://localhost:3000"
-
 # Signature secret for JWTs
 JWT_SECRET=""
 # Ramper URL to use for auth
@@ -8,10 +7,13 @@ RAMPER_URL="https://us-central1-ramper-prod.cloudfunctions.net"
 RAMPER_USERAGENT="Mozilla/5.0 (iPhone; CPU iPhone OS 17_4_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/17.4.1 Mobile/15E148 Safari/604.1"
 # Ramper app ID to use, defaults to Cosmo's
 RAMPER_APP_ID=alzeakpmqx
-
-DATABASE_URL="postgres://postgres:postgres@db.localtest.me:5432/main"
-
+# Ramper app ID to use, defaults to Cosmo's
 RAMPER_API_URL="https://us-central1-ramper-prod.cloudfunctions.net"
-
+# my cosmo token (temporary)
 COSMO_ACCESS_TOKEN=
 COSMO_REFRESH_TOKEN=
+# main database
+DATABASE_URL="postgres://postgres:postgres@db.localtest.me:5432/main"
+# Postgres HTTP proxy (objekt indexer)
+INDEXER_PROXY_KEY=key
+INDEXER_PROXY_URL=http://localhost:8080
