--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack --port 3000",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "typecheck": "tsc --pretty --noEmit",
+    "db:push": "drizzle-kit push",
+    "db:generate": "drizzle-kit generate",
+    "db:upgrade": "drizzle-kit up",
+    "db:migrate": "drizzle-kit migrate",
     "scan": "bunx react-scan@latest localhost:3000"
   },
   "dependencies": {
@@ -28,6 +33,7 @@
     "nextjs-toploader": "^3.7.15",
     "nuqs": "^2.2.3",
     "ofetch": "^1.4.1",
+    "pg": "^8.13.1",
     "react": "^19.0.0",
     "react-aria-components": "^1.5.0",
     "react-dom": "^19.0.0",
@@ -48,12 +54,15 @@
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.62.8",
     "@types/node": "^20",
+    "@types/pg": "^8.11.10",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.30.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.19.2",
     "typescript": "^5"
   }
 }
