--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "scan": "bunx react-scan@latest localhost:3000"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.10.4",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@tanstack/react-query": "^5.62.8",
     "@tanstack/react-query-next-experimental": "^5.62.8",
@@ -28,7 +29,7 @@
     "justd-icons": "^1.10.4",
     "lucide-react": "^0.468.0",
     "motion": "^11.15.0",
-    "next": "15.1.2",
+    "next": "^15.1.2",
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
     "nuqs": "^2.2.3",
@@ -40,6 +41,7 @@
     "react-error-boundary": "^4.1.2",
     "react-intersection-observer": "^9.14.0",
     "remeda": "^2.18.0",
+    "server-only": "^0.0.1",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwind-variants": "^0.3.0",
