--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
     "@t3-oss/env-nextjs": "^0.11.1",
+    "@tailwindcss/postcss": "^4.0.0-beta.8",
     "@tanstack/react-query": "^5.62.8",
     "@tanstack/react-query-next-experimental": "^5.62.8",
     "@tanstack/react-virtual": "^3.11.2",
@@ -27,7 +28,7 @@
     "drizzle-orm": "^0.38.2",
     "jose": "^5.9.6",
     "justd-icons": "^1.10.4",
-    "lucide-react": "^0.468.0",
+    "lucide-react": "^0.469.0",
     "motion": "^11.15.0",
     "next": "^15.1.2",
     "next-themes": "^0.4.4",
@@ -48,7 +49,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-react-aria-components": "^1.2.0",
     "usehooks-ts": "^3.1.0",
-    "viem": "^2.21.55",
+    "viem": "^2.21.56",
     "virtua": "^0.39.2",
     "zod": "^3.24.1",
     "zustand": "^5.0.2"
@@ -63,7 +64,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
     "postcss": "^8",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.0-beta.8",
     "tsx": "^4.19.2",
     "typescript": "^5"
   }
