--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^19.0.0",
     "react-error-boundary": "^4.1.2",
     "react-intersection-observer": "^9.14.0",
+    "react-parallax-tilt": "^1.7.268",
     "remeda": "^2.18.0",
     "server-only": "^0.0.1",
     "sonner": "^1.7.1",
