--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,12 @@ RAMPER_URL="https://us-central1-ramper-prod.cloudfunctions.net"
 RAMPER_USERAGENT="Mozilla/5.0 (iPhone; CPU iPhone OS 17_4_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/17.4.1 Mobile/15E148 Safari/604.1"
 # Ramper app ID to use, defaults to Cosmo's
 RAMPER_APP_ID=alzeakpmqx
-# Ramper app ID to use, defaults to Cosmo's
-RAMPER_API_URL="https://us-central1-ramper-prod.cloudfunctions.net"
+RAMPER_API_URL="https://modhaus.v1.ramper.xyz"
+# Ramper Firebase
+NEXT_PUBLIC_RAMPER_FIREBASE_KEY=""
+NEXT_PUBLIC_RAMPER_FIREBASE_ID=""
+# https://www.alchemy.com/
+NEXT_PUBLIC_ALCHEMY_KEY=""
 # main database
 DATABASE_URL="postgres://postgres:postgres@db.localtest.me:5432/main"
 # Postgres HTTP proxy (objekt indexer)
