--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "scan": "bunx react-scan@latest localhost:3000"
   },
   "dependencies": {
+    "@aws-sdk/client-kms": "^3.716.0",
+    "@aws-sdk/credential-providers": "^3.716.0",
     "@neondatabase/serverless": "^0.10.4",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@tailwindcss/postcss": "^4.0.0-beta.8",
@@ -26,6 +28,7 @@
     "cmdk": "^1.0.4",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.38.2",
+    "firebase": "^11.1.0",
     "jose": "^5.9.6",
     "justd-icons": "^1.10.4",
     "lucide-react": "^0.469.0",
