--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "ofetch": "^1.4.1",
     "pg": "^8.13.1",
     "react": "^19.0.0",
+    "react-aria": "^3.36.0",
     "react-aria-components": "^1.5.0",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^4.1.2",
     "react-intersection-observer": "^9.14.0",
     "react-parallax-tilt": "^1.7.268",
+    "react-stately": "^3.34.0",
     "remeda": "^2.18.0",
     "server-only": "^0.0.1",
     "sonner": "^1.7.1",
